# ckpt

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  tests.yml
ckpt/: __init__.py  __main__.py  cli.py  mcp_server.py  menu.py  models.py  snapshot.py  store.py  tui.py
tests/: test_cli.py  test_mcp.py  test_menu.py  test_models.py  test_snapshot.py  test_store.py
